# server/src/dtos/search.dto.ts
@@ -166,8 +166,8 @@ export class MetadataSearchDto extends BaseSearchDto {
 
   @IsEnum(AssetOrder)
   @Optional()
-  @ApiProperty({ enumName: 'AssetOrder', enum: AssetOrder })
-  order?: AssetOrder;
+  @ApiProperty({ enumName: 'AssetOrder', enum: AssetOrder, default: AssetOrder.DESC })
+  order!: AssetOrder;
 }
 
 export class SmartSearchDto extends BaseSearchDto {
